[package]
name = "shore-daemon"
version = "0.1.3"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Persistent AI character engine daemon — long-running process behind the Silvershore chat protocol."

[dependencies]
shore-protocol = { workspace = true }
shore-swp-server = { workspace = true }
shore-config = { workspace = true }
shore-diagnostics = { workspace = true }
shore-llm = { workspace = true }
shore-ledger = { workspace = true }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rand = "0.9"
dashmap = { workspace = true }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
sha2 = "0.10"
base64 = "0.22.1"
tempfile = "3"
shell-words = "1.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
fast_image_resize = { version = "6", features = ["image"] }
which = { workspace = true }
libc = { workspace = true }
notify = "8.2"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
shore-swp-client = { workspace = true }
shore-config = { workspace = true }
shore-diagnostics = { workspace = true }
shore-llm = { workspace = true }
shore-test-harness = { workspace = true }
wiremock = "0.6"
async-trait = { workspace = true }

[lints]
workspace = true
