[package]
name = "shore-diagnostics"
version = "0.2.2"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Shared diagnostic ring buffers and structured-logging helpers used by the Silvershore daemon."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
