[package]
name = "shore-ledger"
version = "4.0.2"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Conversation ledger and message persistence layer for the Silvershore daemon."

[dependencies]
shore-llm = { workspace = true }
shore-config = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
