[package]
name = "shore-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
shore-protocol = { workspace = true }
shore-config = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }

[features]
default = []
local-embeddings = ["dep:fastembed", "dep:dirs"]

[dependencies.fastembed]
version = "5"
optional = true
default-features = false
features = ["ort-download-binaries-native-tls", "hf-hub-native-tls"]

[dependencies.dirs]
workspace = true
optional = true

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }
