[package]
name = "shore-llm"
version = "7.0.2"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "LLM provider abstraction and request orchestration for the Silvershore daemon."

[dependencies]
shore-protocol = { workspace = true }
shore-config = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
