[package]
name = "shore-mcp-client"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "MCP (Model Context Protocol) client for the Silvershore daemon."

[dependencies]
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
