[package]
name = "shore-swp-server"
version = "1.8.8"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Shore Wire Protocol (SWP) server implementation for the Silvershore daemon."

[dependencies]
shore-protocol = { workspace = true }
shore-config = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fs2 = "0.4"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
tempfile = { workspace = true }
