[package]
name = "shore-cli"
version = "2.0.2"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Command-line client (`shore`) for the Silvershore daemon."

[[bin]]
name = "shore"
path = "src/main.rs"

[dependencies]
shore-protocol = { workspace = true }
shore-config = { workspace = true }
shore-swp-client = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = "1"
toml = { workspace = true }
chrono = "0.4"
crossterm = "0.28"
base64 = "0.22"
tempfile = "3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tempfile = "3"

[lints]
workspace = true
