[package]
name = "shore-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
shore-protocol = { workspace = true }
shore-swp-client = { workspace = true }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = { workspace = true }
serde_json = "1"
pulldown-cmark = { version = "0.13.3", default-features = false }
base64 = "0.22"
unicode-width = "0.2"
libc = "0.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
