[package]
name = "shore-config"
# See shore-protocol/Cargo.toml — published independently, version 0.1.0.
version = "0.8.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared configuration types and TOML loader for the Silvershore chat daemon and its clients."

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
