[package]
name = "shore-swp-client"
version.workspace = true
edition = "2021"

[dependencies]
shore-config = { workspace = true }
shore-protocol = { workspace = true }
tracing = { workspace = true }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { workspace = true }
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "macros", "time"] }
thiserror = "2"
rodio = { version = "0.19", default-features = false, features = ["wav"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = { workspace = true }
