[package]
name = "shore-swp-client"
# See shore-protocol/Cargo.toml — published independently, version 0.1.0.
version = "0.3.7"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Async client connection library for the Silvershore daemon's Shore Wire Protocol (SWP)."

[dependencies]
shore-config = { workspace = true }
shore-protocol = { workspace = true }
tracing = { workspace = true }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { workspace = true }
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "macros", "time"] }
thiserror = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = { workspace = true }

[lints]
workspace = true
