[package]
name = "shore-test-harness"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[dependencies]
shore-config = { workspace = true }
shore-swp-client = { workspace = true }
shore-daemon = { workspace = true }
shore-swp-server = { workspace = true }
shore-protocol = { workspace = true }
shore-llm = { workspace = true }
shore-ledger = { workspace = true }
shore-call-store = { workspace = true }
shore-diagnostics = { workspace = true }

wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
serde_json = { version = "1", features = ["preserve_order"] }
tracing = "0.1"
toml = { workspace = true }
rusqlite = { workspace = true }

[lints]
workspace = true
