[package]
name = "shore-bridge"
version = "0.1.0"
edition = "2024"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
shore-client = { path = "../../shore-client" }
shore-protocol = { path = "../../shore-protocol" }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
serde_json = "1"
