[package]
name = "shore-gui"
version = "0.1.0"
edition = "2021"
description = "Shore desktop GUI client"

[lib]
name = "shore_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
shore-client = { path = "../../shore-client" }
shore-protocol = { path = "../../shore-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.3"
png = "0.17"
